Assignment 1 - Docker and MongoDb implementation
