# assignment1/python-flask-server-generated/swagger_server/controllers/default_controller.py
@@ -3,7 +3,7 @@ import six
 
 from swagger_server.models.student import Student  # noqa: E501
 from swagger_server import util
-
+from swagger_server.service.student_service import *
 
 def add_student(body=None):  # noqa: E501
     """Add a new student
@@ -17,10 +17,11 @@ def add_student(body=None):  # noqa: E501
     """
     if connexion.request.is_json:
         body = Student.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+        return add(body)
+    return 500, 'error'
 
 
-def delete_student(student_id):  # noqa: E501
+def delete_student(_id):  # noqa: E501
     """delete student
 
     delete a single student  # noqa: E501
@@ -30,10 +31,10 @@ def delete_student(student_id):  # noqa: E501
 
     :rtype: object
     """
-    return 'do some magic!'
+    return delete(_id)
 
 
-def get_student_by_id(student_id):  # noqa: E501
+def get_student_by_id(_id):  # noqa: E501
     """gets student
 
     Returns a single student # noqa: E501
@@ -43,4 +44,4 @@ def get_student_by_id(student_id):  # noqa: E501
 
     :rtype: Student
     """
-    return 'do some magic!'
+    return get_by_id(_id)
